# loates

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: log_output.rs  simple.rs  web.rs
src/: app.rs  config.rs  data.rs  db.rs  error.rs  executor.rs  integrations.rs  lib.rs  logical.rs  main.rs  meta.rs  metrics.rs  report.rs  runner.rs  server.rs  tracing.rs  tui.rs  user.rs
src/app/: tui.rs  web.rs
src/app/meta/: message.rs
src/app/meta/client/: mod.rs
src/app/tui/: ui.rs
src/client/: mod.rs  reqwest.rs
src/integrations/: hurl.rs
src/meta/: discovery.rs  message.rs  server.rs
src/tracing/: message.rs  task_event.rs
src/tracing/task_event/: metrics.rs
src/tui/: ui.rs
