[package]
name = "loates"
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.75"
description = "Loates is a load testing framework, with focus on ease of use and flexiblity."
repository = "https://github.com/trueleo/loates"
license = "MIT"
keywords = ["testing", "load-testing", "http"]
categories = [
    "concurrency",
    "development-tools",
    "development-tools::profiling",
    "web-programming",
]
exclude = ["/assets"]

[features]
meta = ["url", "dashmap", "reqwest"]
reqwest = ["dep:reqwest"]
kube = ["dep:kube"]
consul = ["dep:reqwest"]
etcd = ["dep:etcd-client"]
mdns = ["dep:zeroconf"]

[dependencies]
atomic = "0.6"
anyhow = "1.0"
async-trait = "0.1"
async_fn_traits = "0.1"
async-stream = "0.3"
futures = { version = "0.3", features = ["std"] }
thiserror = "1.0"
async-scoped = { version = "0.9", features = ["use-tokio"] }
tokio = { version = "1.35", features = [
    "time",
    "sync",
    "net",
], default-features = false }
ordered-float = "4.2"
tracing-subscriber = { version = "0.3", features = [
    "registry",
], default-features = false }
tracing = "0.1"
tdigest = "0.2"
http-body = "1.0"
bytemuck = "1.16"
chrono = "0.4"
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"]}
static-files = { version = "0.2" }
open = { version = "5.2" }
ulid = { version = "1.2", features = ["serde"] }
duckdb = { version = "1.3.2", features = ["bundled", "chrono", "parquet"] }

dashmap = { version = "6.0", optional = true }
url = { version = "2.5.7", optional = true }
kube = { version = "2", optional = true }
etcd-client = { version = "0.17", optional = true }
zeroconf = { version = "0.15", optional = true }
serde_json = "1.0.145"
dirs = "6.0.0"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["http2", "rustls-tls", "charset", "stream", "multipart", "json"]
optional = true

[build-dependencies]
cargo_toml = { version = "0.20" }
ureq = { version = "2.9" }
static-files = { version = "0.2" }
zip = { version = "2" }

[dev-dependencies.reqwest]
version = "0.12"
default-features = false
features = ["http2", "rustls-tls", "charset"]

[dev-dependencies.tokio]
version = "1.35"
default-features = false
features = ["rt", "macros"]

[[example]]
name = "simple"
path = "./examples/simple.rs"
required-features = ["tui", "reqwest"]

[[example]]
name = "web"
path = "./examples/web.rs"
required-features = ["web", "reqwest"]

[[example]]
name = "log_out"
path = "./examples/log_output.rs"
required-features = ["web", "reqwest"]

[package.metadata.ui]
assets-url = "https://github.com/trueleo/loates-web/releases/download/v1.0.1-18c8e24/build.zip"
