[package]
name = "loates"
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.75"
description = "Loates is a load testing framework, with focus on ease of use and flexiblity."
repository = "https://github.com/trueleo/loates"
license = "MIT"
keywords = ["testing", "load-testing", "http"]
categories = [
    "concurrency",
    "development-tools",
    "development-tools::profiling",
    "web-programming",
]
exclude = ["/assets"]

[features]
meta = ["dep:url", "reqwest"]
reqwest = ["dep:reqwest"]
kube = ["dep:kube"]
consul = ["dep:reqwest"]
etcd = ["dep:etcd-client"]
mdns = ["dep:zeroconf"]
hurl = ["dep:hurl_core", "reqwest", "dep:bytes", "dep:serde_urlencoded", "dep:url"]

[dependencies]
atomic = "0.6"
anyhow = "1.0"
async-trait = "0.1"
async_fn_traits = "0.1"
async-scoped = { version = "0.9", features = ["use-tokio"] }
async-stream = "0.3"
axum = { version = "0.7", features = ["json", "macros"] }
bytemuck = "1.16"
chrono = "0.4"
dirs = "6.0.0"
dashmap = { version = "6.0" }
duckdb = { version = "1.3.2", features = ["bundled", "chrono", "parquet"] }
futures = { version = "0.3", features = ["std"] }
http-body = "1.0"
thiserror = "1.0"
open = { version = "5.2" }
ordered-float = "4.2"
tdigest = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "registry",
], default-features = false }
tracing = "0.1"
tokio = { version = "1.35", features = [
    "time",
    "sync",
    "net",
], default-features = false }
tower-http = { version = "0.5", features = ["cors"] }
static-files = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.145" }
ulid = { version = "1.2", features = ["serde"] }

hurl_core = { version = "7.0.0", optional = true }
url = { version = "2.5.7", optional = true }
kube = { version = "2", optional = true }
etcd-client = { version = "0.17", optional = true }
zeroconf = { version = "0.15", optional = true }
bytes = { version = "1.10.1", optional = true }
serde_urlencoded = { version = "0.7", optional = true }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["http2", "rustls-tls", "charset", "stream", "multipart", "json", "cookies"]
optional = true

[build-dependencies]
cargo_toml = { version = "0.20" }
ureq = { version = "2.9" }
static-files = { version = "0.2" }
zip = { version = "2" }

[dev-dependencies.reqwest]
version = "0.12"
default-features = false
features = ["http2", "rustls-tls", "charset"]

[dev-dependencies.tokio]
version = "1.35"
default-features = false
features = ["rt", "macros"]

[[example]]
name = "simple"
path = "./examples/simple.rs"
required-features = ["tui", "reqwest"]

[[example]]
name = "web"
path = "./examples/web.rs"
required-features = ["web", "reqwest"]

[[example]]
name = "log_out"
path = "./examples/log_output.rs"
required-features = ["web", "reqwest"]

[package.metadata.ui]
assets-url = "https://github.com/trueleo/loates-web/releases/download/v1.0.1-18c8e24/build.zip"
